# face

./: README.md
Faces/client/: facedetector.cpp  imageprovider.h  threads.cpp  threads.h
Faces/faceserver/: CMakeLists.txt  Main.qml  checkfacethread.cpp  checkfacethread.h  clienthandler.cpp  clienthandler.h  connectionpool.cpp  connectionpool.h  main.cpp  resource.qrc  servercpp.cpp  servercpp.h
client/: CMakeLists.txt  facedetector.h  imageprovider.cpp  main.cpp
client/shaders/: round_corner.frag  round_corner.frag.qsb
